# eApps

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  build.gradle.kts  gradle.properties  index.html  settings.gradle.kts
.github/: BRANCH_PROTECTION.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: build-browser-extensions.yml  build-cli-tools.yml  build-desktop.yml  build-enterprise.yml  build-mobile.yml  build-vscode-extension.yml  build-web-apps.yml  ci-native.yml  ci.yml  codeql.yml  cross-repo-dispatch.yml  deploy-marketplace.yml  eosim-sanity.yml  mobile-test.yml  nightly.yml  release-all.yml  release-app.yml  release-native.yml  release-suite-installers.yml  release-suite.yml  release.yml  scorecard.yml  (+4 more)
apps/ebirds/: CMakeLists.txt  build.gradle.kts  ebirds.c  ebirds.h
apps/ebirds/src/commonMain/kotlin/com/eos/eapps/apps/ebirds/: App.kt
apps/eblocks/: CMakeLists.txt  build.gradle.kts  eblocks.c  eblocks.h
apps/eblocks/src/commonMain/kotlin/com/eos/eapps/apps/eblocks/: App.kt
apps/ebot/: CMakeLists.txt  ebot.c  ebot.h
apps/ebuffer/: CMakeLists.txt  build.gradle.kts  ebuffer.c  ebuffer.h
apps/ebuffer/src/commonMain/kotlin/com/eos/eapps/apps/ebuffer/: App.kt
apps/echess/: CMakeLists.txt  build.gradle.kts  echess.c  echess.h
apps/echess/src/commonMain/kotlin/com/eos/eapps/apps/echess/: App.kt
apps/ecleaner/: CMakeLists.txt  build.gradle.kts  ecleaner.c  ecleaner.h
apps/ecleaner/src/commonMain/kotlin/com/eos/eapps/apps/ecleaner/: App.kt
apps/eclock/: CMakeLists.txt  build.gradle.kts  eclock.c  eclock.h
apps/eclock/src/commonMain/kotlin/com/eos/eapps/apps/eclock/: App.kt
apps/econverter/: CMakeLists.txt  build.gradle.kts  econverter.c  econverter.h
apps/econverter/src/commonMain/kotlin/com/eos/eapps/apps/econverter/: App.kt
apps/ecrush/: CMakeLists.txt  build.gradle.kts  ecrush.c  ecrush.h
apps/ecrush/src/commonMain/kotlin/com/eos/eapps/apps/ecrush/: App.kt
apps/efiles/: CMakeLists.txt  build.gradle.kts  efiles.c  efiles.h
apps/efiles/src/commonMain/kotlin/com/eos/eapps/apps/efiles/: App.kt
apps/egallery/: CMakeLists.txt  build.gradle.kts  egallery.c  egallery.h
apps/egallery/src/commonMain/kotlin/com/eos/eapps/apps/egallery/: App.kt
apps/eguard/: CMakeLists.txt  build.gradle.kts  eguard.c  eguard.h
apps/eguard/src/commonMain/kotlin/com/eos/eapps/apps/eguard/: App.kt
apps/emusic/: CMakeLists.txt  build.gradle.kts  emusic.c  emusic.h
apps/emusic/src/commonMain/kotlin/com/eos/eapps/apps/emusic/: App.kt
apps/enote/: CMakeLists.txt  build.gradle.kts  enote.c  enote.h
apps/enote/src/commonMain/kotlin/com/eos/eapps/apps/enote/: App.kt
apps/epaint/: CMakeLists.txt  build.gradle.kts  epaint.c  epaint.h
apps/epaint/src/commonMain/kotlin/com/eos/eapps/apps/epaint/: App.kt
apps/eplay/: CMakeLists.txt  build.gradle.kts  eplay.c  eplay.h
apps/eplay/src/commonMain/kotlin/com/eos/eapps/apps/eplay/: App.kt
apps/eremote/: CMakeLists.txt  README.md  eremote.c  eremote.h  eremote_engine.c
apps/erunner/: CMakeLists.txt  build.gradle.kts  erunner.c  erunner.h
apps/erunner/src/commonMain/kotlin/com/eos/eapps/apps/erunner/: App.kt
apps/eserial/: CMakeLists.txt  build.gradle.kts  eserial.c  eserial.h
apps/eserial/src/commonMain/kotlin/com/eos/eapps/apps/eserial/: App.kt
apps/esession/: CMakeLists.txt  build.gradle.kts  esession.c  esession.h
apps/esession/src/commonMain/kotlin/com/eos/eapps/apps/esession/: App.kt
apps/eslice/: CMakeLists.txt  build.gradle.kts  eslice.c  eslice.h
apps/eslice/src/commonMain/kotlin/com/eos/eapps/apps/eslice/: App.kt
apps/esurfer/: CMakeLists.txt  build.gradle.kts  esurfer.c  esurfer.h
apps/esurfer/src/commonMain/kotlin/com/eos/eapps/apps/esurfer/: App.kt
apps/etimer/: CMakeLists.txt  build.gradle.kts  etimer.c  etimer.h
apps/etimer/src/commonMain/kotlin/com/eos/eapps/apps/etimer/: App.kt
apps/etools/: CMakeLists.txt  build.gradle.kts  etools.c  etools.h
apps/etools/src/commonMain/kotlin/com/eos/eapps/apps/etools/: App.kt
apps/etrack/: CMakeLists.txt  etrack.c  etrack.h
apps/etunnel/: CMakeLists.txt  build.gradle.kts  etunnel.c  etunnel.h
apps/etunnel/src/commonMain/kotlin/com/eos/eapps/apps/etunnel/: App.kt
apps/evideo/: CMakeLists.txt  build.gradle.kts  evideo.c  evideo.h
apps/evideo/src/commonMain/kotlin/com/eos/eapps/apps/evideo/: App.kt
browser-extensions/: README.md
build-logic/: build.gradle.kts  settings.gradle.kts
cmake/: android.cmake  cppcheck.cmake  emscripten.cmake  eos.cmake  ios.cmake  linux.cmake  tv_android.cmake  windows.cmake
css/: marketplace.css
data/: apps.json
desktop-apps/: README.md
dev-tools/: README.md
docs/: adding-apps.md  architecture.md  eapps-architecture.mmd  marketplace-architecture.md  platform-guide.md  porting-guide.md
extensions/: README.md
gradle/: libs.versions.toml
js/: marketplace.js
mobile-apps/: README.md
port/: CMakeLists.txt
port/android/: lv_port_disp_android.c  lv_port_indev_android.c  main_android.c
port/eos/: lv_port_disp_eos.c  lv_port_indev_eos.c  main_eos.c
port/ios/: lv_port_disp_ios.c  lv_port_indev_ios.c  main_ios.c
port/sdl2/: lv_port_disp_sdl2.c  lv_port_indev_sdl2.c  main_sdl2.c
port/tv/: lv_port_disp_tv.c  lv_port_indev_tv.c  main_tv.c
port/web/: lv_port_disp_web.c  lv_port_indev_web.c  main_web.c  shell.html
promo/: generate_audio.py  promo_scene.py
scripts/: build-installers.sh  check_formats.py  fix_remaining_zips.py  generate_apps_json.py  update_release_formats.py
service-apps/: README.md  analysis_options.yaml  pubspec.yaml
shared/: README.md
tests/: CMakeLists.txt  eapps_test.h  test_app_lifecycle.c  test_date_utils.c  test_eremote.c  test_ewifi.c  test_expr_parser.c  test_game_engine.c  test_math_utils.c  test_merge_validation.py  test_prefs.c  test_registry.c  test_string_utils.c
updates/: chrome-updates.xml  firefox-updates.json
(+918 files in other folders)
